--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ bevy_asset_loader = { version = "0.13", features = ["stageless"] }
 iyes_loopless = "=0.8.0"
 iyes_progress = "=0.6.0"
 pathfinding = "3.0.14"
+bevy_prototype_debug_lines = "0.8.1"
